fdo#80569:FILEOPEN:4.4 Regression .docx chart not rendered properly

Change-Id: Ic3304c1bd11fcd372a0859a70a531675effe7af0